--- a/template/index.html
+++ b/template/index.html
@@ -8,10 +8,58 @@
 
 </head>
 <body>
+<!-- partial:index.partial.html -->
+<header class="header">
+	<div class="header-content responsive-wrapper">
+		<div class="header-logo">
+			<a href="#">
+				<div>
+					<img src="https://assets.codepen.io/285131/untitled-ui-icon.svg" />
+				</div>
+				<img src="https://assets.codepen.io/285131/untitled-ui.svg" />
+			</a>
+		</div>
+		<div class="header-navigation">
+			<nav class="header-navigation-links">
+				<a href="#"> Home </a>
+				<a href="#"> Dashboard </a>
+				<a href="#"> Projects </a>
+				<a href="#"> Tasks </a>
+				<a href="#"> Reporting </a>
+				<a href="#"> Users </a>
+			</nav>
+			<div class="header-navigation-actions">
+				<a href="#" class="button">
+					<i class="ph-lightning-bold"></i>
+					<span>Upgrade now</span>
+				</a>
+				<a href="#" class="icon-button">
+					<i class="ph-gear-bold"></i>
+				</a>
+				<a href="#" class="icon-button">
+					<i class="ph-bell-bold"></i>
+				</a>
+				<a href="#" class="avatar">
+					<img src="https://assets.codepen.io/285131/hat-man.png" alt="" />
+				</a>
+			</div>
+		</div>
+		<a href="#" class="button">
+			<i class="ph-list-bold"></i>
+			<span>Menu</span>
+		</a>
+	</div>
+</header>
 <main class="main">
 	<div class="responsive-wrapper">
 		<div class="main-header">
 			<h1>Settings</h1>
+			<div class="search">
+				<input type="text" placeholder="Search" />
+				<button type="submit">
+					<i class="ph-magnifying-glass-bold"></i>
+				</button>
+			</div>
 		</div>
 		<div class="horizontal-tabs">
 			<a href="#">My details</a>
@@ -42,6 +90,16 @@
 			</div>
 		</div>
 		<div class="content">
+			<div class="content-panel">
+				<div class="vertical-tabs">
+					<a href="#" class="active">View all</a>
+					<a href="#">Developer tools</a>
+					<a href="#">Communication</a>
+					<a href="#">Productivity</a>
+					<a href="#">Browser tools</a>
+					<a href="#">Marketplace</a>
+				</div>
+			</div>
 			<div class="content-main">
 				<div class="card-grid">
 					<article class="card">
